[project]
name = "interpreter-v2"
version = "2.1.0"
description = "Offline screen translator for Japanese retro games"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [
    { name = "qube" }
]
keywords = ["ocr", "translation", "japanese", "games", "retro"]

dependencies = [
    # OCR
    "meikiocr",
    "onnxruntime",
    # Translation (Sugoi V4)
    "ctranslate2",
    "sentencepiece",
    # Image processing
    "Pillow>=10.0.0",
    "numpy",
    "opencv-python",
    # Screen capture
    "mss>=9.0.0",
    # Configuration
    "PyYAML>=6.0",
    # Model download
    "requests",
    "tqdm",
    # Logging
    "structlog>=24.0.0",
    # macOS only - window capture
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    # Windows only - window capture
    "pygetwindow>=0.0.9; sys_platform == 'win32'",
    "windows-capture>=1.4.0; sys_platform == 'win32'",
    # Linux only - window capture (X11)
    "python-xlib>=0.33; sys_platform == 'linux'",
    # GPU acceleration (CUDA 12) - Windows and Linux
    "nvidia-cublas-cu12; sys_platform == 'win32' or sys_platform == 'linux'",
    "nvidia-cudnn-cu12; sys_platform == 'win32' or sys_platform == 'linux'",
    # Global hotkeys - pynput for macOS/Windows, python-xlib for Linux
    "pynput>=1.7.6; sys_platform != 'linux'",
]

[project.scripts]
interpreter-v2 = "interpreter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interpreter"]

