[project]
name = "ocr-benchmark"
version = "1.0.0"
description = "OCR benchmark for PaddleOCR and MeikiOCR hybrid models"
requires-python = ">=3.11,<3.13"

dependencies = [
    # PaddlePaddle 3.x for macOS ARM
    "paddlepaddle>=3.0.0",
    # PaddleOCR 3.x with mobile/server model support
    "paddleocr>=3.0.0",
    # MeikiOCR multilingual fork from eriksonssilva
    "meikiocr @ git+https://github.com/eriksonssilva/meikiocr.git@meiki-multilingual",
    # Image processing
    "Pillow>=10.0.0",
    "numpy",
    "opencv-python>=4.8.0",
    "pyspellchecker>=0.8.4",
]

[project.scripts]
ocr-benchmark = "ocr_benchmark:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
